# app/Http/Controllers/Api/FrontEventsController.php
@@ -1,0 +1,106 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use App\Http\Resources\EventResource;
+use Illuminate\Http\Response;
+use App\Models\Event;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Crypt;
+
+class FrontEventsController extends Controller
+{
+    /**
+     * @OA\Get(
+     * * tags={"Users"},
+     ** path="/events",
+     * summary="View Events",
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
+    /**
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function index()
+    {
+        $events = Event::with('tickets','user','sponsors')->get();
+        return (new EventResource($events))
+                  ->response()
+                  ->setStatusCode(Response::HTTP_ACCEPTED);
+    }
+
+    /**
+     * @OA\Get(
+     *   * tags={"Users"},
+     ** path="events/view/{event}",
+     * summary="View Single Event",
+     * @OA\Parameter(
+     *      name="event",
+     *      in="path",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *    ),
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *)
+     **/
+    /**
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function show($id)
+    {
+        $event_id = Crypt::decryptString($id);
+        $event = Event::findOrFail($event_id);
+        return (new EventResource($event))
+                  ->response()
+                  ->setStatusCode(Response::HTTP_ACCEPTED);
+    }
+}
